# Veloxide

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  config-example.yaml  docker-compose.yml  fly.example.toml  fly.toml  pnpm-lock.yaml  sqlx-data.json  velox-config.yaml
.github/workflows/: velox-ci.yml  veloxide-backend-ci.yml
docker/prometheus/: prometheus.yml
docs/: Architecture.md  Folder Explanations.md  Folder Structure.md  GraphQL.md  Metrics.md  README.md  SeaORM.md  Tracing.md  Why-Rust.md
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  project.rs  todo.rs
frontend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/prisma/: schema.prisma
frontend/src/: hooks.server.ts
frontend/src/lib/: AccountBalanceCard.svelte  AccountTransactionsCard.svelte  DepositMoney.svelte  DepositMoneyCard.svelte  GetBankAccount.svelte  MyAccount.svelte  Navbar.svelte  OpenAccount.svelte  WithdrawMoney.svelte  WithdrawMoneyCard.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/any-account/: +page.svelte
frontend/src/routes/protected/: +page.svelte
migration/: Cargo.toml
migration/src/: lib.rs  m20230225_191443_create_project_table.rs  m20230225_201427_create_todo_table.rs
migrations/: 20230222220257_add_status_enum.up.sql  20230222220258_create_todos_table.up.sql  20230228212741_create_events_table.up.sql  20230228212904_create_account_query.up.sql
migrations/mysql/: 20230228212741_create_events_table.up.sql  20230228212904_create_account_query.down.sql  20230228212904_create_account_query.up.sql
prisma/: schema.prisma
src/: configuration.rs  error.rs  lib.rs  main.rs  prelude.rs
src/application/: bank_account_service.rs  mod.rs  todo_service.rs
src/configuration/: config.rs  mod.rs  mysql_db_sqlx.rs  postgres_db_sea_orm.rs  postgres_db_sqlx.rs  tracing_config.rs
src/domain/: mod.rs  project.rs  task.rs  todo.rs
src/domain/bank_account/: aggregate.rs  bank_account_aggregate.rs  bank_account_commands.rs  bank_account_errors.rs  bank_account_events.rs  commands.rs  events.rs  mod.rs
src/infrastructure/: memory.rs  mod.rs  postgres.rs  postgres_sea_orm.rs.txt
src/presentation/: errors.rs  graphql.rs  metadata_extension.rs  mod.rs  openapi.rs
src/presentation/bank_account/: bank_account_graphql.rs  bank_account_handlers.rs  bank_account_views.rs  mod.rs
src/presentation/todo/: mod.rs  todo_dtos.rs  todo_handlers.rs
tests/: cucumber.rs  cucumber_todo.rs
tests/features/: todo.feature
