[package]
name = "velox_todo_api"
description = "Velox To Do API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Liam Woodleigh-Hardinge liam.woodleigh@gmail.com"
]

[dependencies]
thiserror = "~1"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
utoipa = {version = "~3", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "3.0.2", features = ["axum"]}
tracing = {version="~0", features = ["log-always"]}
opentelemetry = {version ="~0", features = ["rt-tokio"] }
tracing-subscriber = {version = "~0"}
opentelemetry-jaeger = {version = "~0", features = ["rt-tokio"] }
tracing-opentelemetry = "~0.18.0"
dotenvy = "~0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "postgres", "json", "uuid", "offline"] }
serde_yaml = "~0.9"
async-trait = "0.1.64"
uuid = { version = "~1", features = ["v4", "serde"] }
axum-macros = "0.3.4"
tracing-log = "0.1.3"
axum-prometheus = "~0"
sea-orm = { version= "~0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "mock"] }
entity = { path = "entity" }
migration = { path = "migration" }
cqrs-es = "0.4.5"

[workspace]
members = [".", "entity", "migration"]

[dev-dependencies]
anyhow = "~1"
pretty_assertions = "1.3.0"
cucumber = "0.19.1"
mockall = { version= "~0" }

[[test]]
name = "cucumber" # this should be the same as the filename of the test target
harness = false  # allows Cucumber to print output instead of libtest
