[package]
name = "example-veloxide-app"
description = "Veloxide: Example Bank Account API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Liam Woodleigh-Hardinge <liam.woodleigh@gmail.com>"]

[dependencies]
# Web / Async
axum = { version = "~0", features = ["macros"] }
hyper = { version = "~0", features = ["full"] }
tokio = { version = "~1", features = ["full"] }
tower = "~0"
axum-prometheus = "~0"
async-trait = "~0"
tower-http = {version= "~0", features = ["cors"]}

# OpenAPI
utoipa = { version = "~3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "~3", features = ["axum"] }

## GraphQL
async-graphql = { version = "5.0.6", optional = true, features = ["playground"] }
async-graphql-axum = { version = "5.0.6", optional = true }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_yaml = "~0"
uuid = { version = "~1", features = ["v4", "serde"] }

# Persistence
sqlx = { version = "~0", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "postgres",
  "mysql",
  "json",
  "uuid",
  "offline",
] }

# Tracing
tracing = { version = "~0", features = ["log-always"] }
opentelemetry = { version = "~0", features = ["rt-tokio"], optional = true }
tracing-subscriber = { version = "~0", optional = true }
opentelemetry-jaeger = { version = "~0", features = [
  "rt-tokio",
], optional = true }
tracing-opentelemetry = { version = "~0", optional = true }
tracing-log = { version = "~0", optional = true }

# Misc
thiserror = "~1"
log = "~0"
dotenvy = "~0"
cqrs-es = "~0"
postgres-es = { version = "~0", optional = true}
chrono = "~0"
derivative = "~2"
ts-rs = { version = "~6", optional = true }
mysql-es = { version = "~0", optional = true}
cfg-if = "1.0.0"

[features]
default = ["tracing", "graphql", "frontend", "mysql"]
mysql = ["mysql-es", "sqlx/mysql"]
postgres = ["postgres-es", "sqlx/postgres"]
tracing = ["tracing-log", "tracing-subscriber", "tracing-opentelemetry", "opentelemetry", "opentelemetry-jaeger"]
graphql = ["async-graphql", "async-graphql-axum"]
frontend = ["ts-rs"]

[workspace]
members = ["."]

[dev-dependencies]
anyhow = "~1"
pretty_assertions = "~1"
cucumber = "~0"
mockall = { version = "~0" }
coverage-helper = "~0"

[[test]]
name = "cucumber" # this should be the same as the filename of the test target
harness = false   # allows Cucumber to print output instead of libtest
